# libnmea

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TODO  dynamic.mk  libnmeaConfig.cmake.in  libnmeaConfigVersion.cmake.in  main.c  nmea.c  nmea.h  nmea_gpgll.c  nmea_gpgll.h  static.mk  test.c
.github/workflows/: builds_and_tests.yml
examples/: minimum.c  parse_stdin.c
src/: gpgga.c  gpgga.h  gpgll.c  gpgll.h  memchr.c  nmea.c  nmea.h  nmea_gpgll.c  nmea_gpgll.h  parse.c  parse.h  parser.c  parser.h  types.h
src/nmea/: nmea.c  nmea.h  parser.c  parser.h  parser_static.c  parser_types.h
src/parsers/: gpgga.c  gpgga.h  gpgll.c  gpgll.h  gpgsa.c  gpgsa.h  gpgsv.c  gpgsv.h  gprmc.c  gprmc.h  gptxt.c  gptxt.h  gpvtg.c  gpvtg.h  parse.c  parse.h  parser.h  types.h
src/sentences/: gpgga.h  gpgll.c  gpgll.h  parser.c  parser.h  types.h
tests/: memcheck.c  memory-leaks.sh  minunit.h  output-nmea.sh  parse_stdin_test.sh  parse_stdin_test_in.txt  parse_stdin_test_out_expected.txt  systest.c  systests.sh  test_lib.c  test_nmea.c  test_nmea_helpers.c  test_parse.c
tests/unit-tests/: test_lib.c  test_nmea_helpers.c  test_parse.c
